k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ski-website
  labels:
    name: ski-website
    environment: production
