k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ski-website
  namespace: ski-website
  labels:
    app: ski-website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ski-website
  template:
    metadata:
      labels:
        app: ski-website
    spec:
      imagePullSecrets:
      - name: ghcr-io-cred
      containers:
      - name: nginx
        image: ghcr.io/schlagenkraft/web/ski-website:simple
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
