k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ski-website
  namespace: ski-website
  labels:
    app: ski-website
  annotations:
    metallb.universe.tf/address-pool: k3s-pool
spec:
  type: LoadBalancer
  selector:
    app: ski-website
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
